# valpago-backend

./: CMakeLists.txt  README.md  go.mod  go.sum
cmd/server/: main.go
include/: config.hpp  database.hpp  errors.hpp  models.hpp  security.hpp  sse.hpp
internal/config/: config.go
internal/db/: mongo.go  redis.go
internal/routes/: auth.go  merchants.go  routes.go  transactions.go  users.go
internal/sse/: sse.go
internal/worker/: worker.go
src/: main.cpp  main.rs
src/config/: config.cpp  mod.rs
src/database/: mongodb.cpp  redis.cpp
src/db/: mod.rs  mongodb.rs  redis.rs
src/errors/: api_error.cpp  mod.rs
src/realtime/: mod.rs  notifier.rs  sse.cpp  ws.rs
src/routes/: auth.rs  mod.rs  transactions.rs  users.cpp  users.rs
src/security/: apikey.cpp  apikey.rs  jwt.cpp  jwt.rs  middleware.rs  mod.rs  password.cpp  password.rs
src/worker/: mod.rs
